# ada-digest

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  render.yaml  server.py
.github/: copilot-instructions.md
.github/instructions/: architecture.md  business-rules.md  code-patterns.md  code-practices.md  coding-guidelines.md
scripts/: setup_secrets.sh
src/app/agent/application/ports/: agent_port.py
src/app/agent/application/use_cases/: generate_daily_digest.py
src/app/agent/domain/entities/: daily_digest.py
src/app/agent/domain/value_objects/: digest_section.py  news_category.py  news_item.py
src/app/agent/infrastructure/driven_adapters/langgraph/adapters/: langgraph_agent_adapter.py
src/app/agent/infrastructure/driven_adapters/langgraph/handlers/: agent_handler.py
src/app/agent/infrastructure/driven_adapters/langgraph/prompts/: agent_system_prompt.py  format_prompt.py  summary_prompt.py
src/app/agent/infrastructure/driven_adapters/langgraph/schemas/: daily_digest_schema.py  news_item_schema.py
src/app/agent/infrastructure/driving_adapters/config/dependencies/: generate_daily_digest_config.py  langgraph_config.py  scheduler_config.py
src/app/agent/infrastructure/driving_adapters/health/: __init__.py  health_router.py
src/app/agent/infrastructure/driving_adapters/scheduler/: digest_scheduler.py
src/app/notifications/application/ports/: email_port.py  renderer_port.py
src/app/notifications/application/use_cases/: send_daily_digest.py
src/app/notifications/domain/value_objects/: email_message.py
src/app/notifications/infrastructure/driven_adapters/gmail/adapters/: jinja_renderer_adapter.py  simplegmail_adapter.py
src/app/notifications/infrastructure/driven_adapters/gmail/templates/: digest.html.j2
src/app/notifications/infrastructure/driving_adapters/config/dependencies/: gmail_config.py  jinja_config.py  send_daily_digest_config.py
