[tool.poetry]
name = "ada-back"
version = "0.1.0"
description = "Agente personal diario de novedades técnicas para programadores"
authors = ["Karen Rincón"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# Agente y razonamiento
langchain = "^0.3"
langchain-google-genai = "^2.0"
langgraph = "^0.2"

# Envío de correo
simplegmail = "^4.1"

# Web scraping
requests = "^2.32"
httpx = "^0.27"
beautifulsoup4 = "^4.12"
lxml = "^5.2"

# Utilidades
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
mypy = "^1.10"
pytest = "^8.2"
pytest-asyncio = "^0.23"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
